# QuantPharmacophore

./: pyproject.toml  requirements.txt
scripts/: checkTrainingData.py  gridSearch.py  predict.py  splitData.py  train.py
src/qphar/: ml_tools.py  modules.py  molecule_tools.py  pharmacophore_tools.py  qphar.py  utils.py
